@@ -115,7 +115,7 @@ auto.biomes=Auto biomes
 existing.minecraft.map=Import existing Minecraft map
 height.map=From height map
 export.as.image.file=Export as image file
-export.as.height.map=Export as 1:1 (low resolution) height map
+export.as.height.map=Export as 1:1 (low resolution) integer height map
 merge.world=Merge with Minecraft map
 this.will.reinitialise.the.biomes=This will reinitialise the biomes and destroy all your changes\!\nAre you sure you want to continue?
 confirm.reinitialisation=Confirm Reinitialisation
