@@ -1,5 +1,5 @@
 #X-Generator: crowdin.net
-the.donation.paypal.page.has.been.opened=De donatie PayPal pagina is geopend in uw browser.\n\nHartelijk dank voor het doneren\!
+the.donation.paypal.page.has.been.opened=De donatie PayPal pagina is geopend in uw browser.\n\nHartelijk dank voor het doneren!
 thank.you=Bedankt
 worldpainter.version.0.njava.version.1.noperating.system.2.3.version.4.n=WorldPainter versie\: {0} ({1})\nJava versie\: {2}\nOperating system\: {3} {4} (versie {5})\n
 installation.directory.0.n=Installatie directory\: {0}\n
