@@ -9,6 +9,7 @@
    + A "select" button has been added to allow selection of the layer from the map with the eyedropper
  * It is now possible to add a Nether or End dimension to Imported worlds
  * Crimson and Warped stems and hyphae are now treated as "logs" for purposes of leaf distance calculations
+ * Some small usability improvements
  * Bug fix: selecting a paint from the map from the Global Operations screen now works more than once
  * Bug fix: selecting a paint from the map does not crash inside the selection (or when other system layers are present)
  * Bug fix: Merging a world that was not Imported will no longer cause it to be considered an Imported world afterwards
